# rlfetch

./: .gitignore  LICENSE  README.md  setup.cfg
src/rlfetch/: __init__.py  repos.json  rlfetch.py
