[metadata]
name = rlfetch
version = 0.1
author = Anri Dellal
author_email = anridellal@gmail.com
description = Repology fetch tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/HenriDellal/repologyfetch
project_urls =
    Bug Tracker = https://github.com/HenriDellal/repologyfetch/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.6

[options.entry_points]
console_scripts = rlfetch=rlfetch:main

[options.package_data]
* = *.json

[options.packages.find]
where = src
